# wipe

./: Cargo.toml  LICENSE  README.md
misc/: placeholder.txt  script-1.sh  script-2.sh  script-3.sh
misc/shell/: wipe.fish  wipe.zsh
src/: array.rs  char.rs  choose.rs  color.rs  error.rs  exec.rs  main.rs  pallet.rs  printer.rs  render.rs  renderer.rs  runner.rs  sampler.rs  surface.rs  term.rs  timer.rs  vec.rs
src/animation/: circle.rs  mod.rs  rhombus.rs  rotation.rs  sonar.rs
src/color/: factory.rs  mod.rs
src/convert/: char.rs  color.rs  level.rs  mod.rs
src/fill/: circle.rs  factory.rs  level.rs  mod.rs  stripes.rs
src/pattern/: circle.rs  line.rs  mod.rs  rhombus.rs  wheel.rs
src/sampler/: char.rs  color.rs  level.rs  mod.rs
src/transform/: invert.rs  mod.rs  segment.rs  shift.rs  shrink.rs  slice.rs  swap.rs  units.rs
