[package]
name = "wipe"
version = "2.0.0"
edition = "2021"
description = "Wipe the content of your terminal."
license = "MIT"
repository = "https://github.com/ricoriedel/wipe"
authors = ["Rico Riedel <rico.riedel@protonmail.ch>"]

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
crossterm = "0.25.0"
ctrlc = "3.2.3"
cancellation = "0.1.0"
derive_more = "0.99"
rand = "0.8"

[dev-dependencies]
mockall = "0.11"
approx = "0.5"